some text delete

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Material icon cdn -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    <!-- Material icon end -->d
+    <!-- Material icon end -->
 
 </head>
 <body>
